omd-a34.3: BuildSensorProfiles job + component tests (3 passing)
confidence = count(*)/100.0, no clamp — high-volume devices naturally
exceed 1.0, which is the Goal B red DQ case. Tests: avg lat/lon per
device, null/empty sensor_id exclusion, confidence > 1.0 assertion
(catches accidental re-introduction of a clamp).

build.sbt: Flat classloader + --add-opens + fork=true for Spark/JDK 21
compatibility.